# libdmtx

./: CMakeLists.txt  autogen.sh  dmtx.h  dmtx.hpp  dmtxbytelist.c  dmtxdecode.c  dmtxencode.c  dmtximage.c  dmtxmatrix3.c  dmtxmessage.c  dmtxregion.c  dmtxsymbol.c  dmtxtime.c  dmtxvector2.c
test/cpp_test/: main.cpp
